move config to yml

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -13,10 +13,13 @@ spring:
         - id: discovery-server
           uri: http://localhost:8761
           predicates:
-            - Path=/eureka/**
             - Path=/eureka/web
           filters:
             - SetPath=/
+        - id: discovery-server
+          uri: http://localhost:8761
+          predicates:
+            - Path=/eureka/**
 eureka:
       client:
         serviceUrl:
