--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -20,10 +20,15 @@ spring:
           uri: http://localhost:8761
           predicates:
             - Path=/eureka/**
+  security:
+    oauth2:
+      resource-server:
+        jwt:
+          issuer-uri: http://localhost:8181/realms/spring-boot-microservices-realm
 eureka:
       client:
         serviceUrl:
-          defaultZone: http://localhost:8761/eureka
+          defaultZone: http://eureka:password@localhost:8761/eureka
 logging:
   level:
     root: info
