--- a/discovery-server/src/main/resources/application.yml
+++ b/discovery-server/src/main/resources/application.yml
@@ -6,5 +6,8 @@ eureka:
     fetch-registry: false
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+  username: ${EUREKA_USERNAME:eureka}
+  password: ${EUREKA_PASSWORD:password}
+
 server:
   port: 8761
