service registry integration with consul

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/product-service
-eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
+#eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 spring.application.name=product-service
 server.port=0
+#spring.cloud.consul.discovery.instanceId=${spring.application.name}-${server.port}-${random.int[1,99]}
+spring.cloud.consul.discovery.instanceId=${spring.application.name}:${random.value}
+spring.cloud.consul.host=localhost
+spring.cloud.consul.port=8500
+spring.cloud.consul.discovery.prefer-ip-address=true
+spring.cloud.consul.config.enabled=false
+spring.cloud.consul.discovery.acl-token=76fbd530-666b-6279-fce6-38f6ba8387dd
